// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderBlockStart renders 0 1`] = `
Array [
  .c0 {
  border-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStart renders function 1`] = `
Array [
  .c0 {
  border-block-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStart renders invalid theme path 1`] = `
Array [
  .c0 {
  border-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStart renders negative number 1`] = `
Array [
  .c0 {
  border-block-start: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStart renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-block-start: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-start: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-start: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-start: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStart renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-block-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-block-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-start: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-block-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-block-start: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStart renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-block-start: July;
}

@media May {
  .c0 {
    border-block-start: August;
  }
}

@media April {
  .c0 {
    border-block-start: September;
  }
}

@media January {
  .c0 {
    border-block-start: November;
  }
}

@media April {
  .c0 {
    border-block-start: August;
  }
}

@media June {
  .c0 {
    border-block-start: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: July;
}

@media May {
  .c0 {
    border-block-start: August;
  }
}

@media April {
  .c0 {
    border-block-start: September;
  }
}

@media January {
  .c0 {
    border-block-start: November;
  }
}

@media April {
  .c0 {
    border-block-start: August;
  }
}

@media June {
  .c0 {
    border-block-start: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-start: November;
  }
}

@media April {
  .c0 {
    border-block-start: January;
  }
}

@media January {
  .c0 {
    border-block-start: December;
  }
}

@media April {
  .c0 {
    border-block-start: April;
  }
}

@media June {
  .c0 {
    border-block-start: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-start: November;
  }
}

@media April {
  .c0 {
    border-block-start: January;
  }
}

@media January {
  .c0 {
    border-block-start: December;
  }
}

@media April {
  .c0 {
    border-block-start: April;
  }
}

@media June {
  .c0 {
    border-block-start: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStart renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-block-start: July;
  }
}

@media April {
  .c0 {
    border-block-start: August;
  }
}

@media January {
  .c0 {
    border-block-start: September;
  }
}

@media April {
  .c0 {
    border-block-start: November;
  }
}

@media June {
  .c0 {
    border-block-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-block-start: July;
  }
}

@media April {
  .c0 {
    border-block-start: August;
  }
}

@media January {
  .c0 {
    border-block-start: September;
  }
}

@media April {
  .c0 {
    border-block-start: November;
  }
}

@media June {
  .c0 {
    border-block-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-start: January;
  }
}

@media April {
  .c0 {
    border-block-start: December;
  }
}

@media January {
  .c0 {
    border-block-start: April;
  }
}

@media April {
  .c0 {
    border-block-start: May;
  }
}

@media June {
  .c0 {
    border-block-start: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-block-start: January;
  }
}

@media April {
  .c0 {
    border-block-start: December;
  }
}

@media January {
  .c0 {
    border-block-start: April;
  }
}

@media April {
  .c0 {
    border-block-start: May;
  }
}

@media June {
  .c0 {
    border-block-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStart renders postitive number 1`] = `
Array [
  .c0 {
  border-block-start: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStart renders string 1`] = `
Array [
  .c0 {
  border-block-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBlockStart renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderBlockStart renders valid theme path 1`] = `
Array [
  .c0 {
  border-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-block-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
